@@ -36,6 +36,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-12-05 DP  1.8.1  Don't allow the user to direct-debug trigger functions,
+                      only global breakpoints should be used on them (or the
+                      trigger itself).
 2007-12-05 DP  1.8.1  Don't offer edbspl functions when creating triggers as
                       they should have inline bodies.
 2007-12-04 DP  1.8.1  Don't quote database names that happen to be keywords
@@ -1015,6 +1018,7 @@ Date       Dev Ver    Change details
 2003-08-07 AP  0.9.2  help system cleanups, support of CHM help for win32.
 2003-08-07 AP  0.9.2  Added missing comment in domain property.
 2003-08-06 DP  0.9.2  Bumped version number.
+
 
 
 
